--- a/HelpDesk.DAL/HelpDesk.DAL.csproj
+++ b/HelpDesk.DAL/HelpDesk.DAL.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HelpDesk.Models\HelpDesk.Models.csproj" PrivateAssets="All" />
+    <ProjectReference Include="..\HelpDesk.Models\HelpDesk.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
