MembershipTools ve sayfa düzenlemeleri. #1 #2

--- a/HelpDesk.Web/appsettings.json
+++ b/HelpDesk.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HelpDeskDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HelpDeskDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=HelpDeskDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
